force-app/main/default/objects/FlightDelayLog__c/FlightDelayLog__c.object-meta.xml
<CustomObject>
    <label>FlightDelayLog</label>
    <nameField>
        <displayFormat>FDLN-{0000}</displayFormat>
        <label>FlightDelayLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FlightDelayLogs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>