force-app/main/default/objects/FlightDelayLog__c/fields/Delay_Duration__c.field-meta.xml
<CustomField>
    <fullName>Delay_Duration__c</fullName>
    <description>Delay Duration In Hours</description>
    <label>Delayed Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>