force-app/main/default/objects/FlightDelayLog__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Flight Delay Description containing flight name and log timing</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>