force-app/main/default/objects/FlightDelayLog__c/fields/Minute__c.field-meta.xml
<CustomField>
    <fullName>Minute__c</fullName>
    <label>Delayed Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>